--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+boto3 = "^1.28.40"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
