update: template add lambda layer

--- a/template.yaml
+++ b/template.yaml
@@ -38,6 +38,18 @@ Resources:
       # DefinitionUri:
       #   Bucket: !Sub ${S3Bucket}
       #   Key: !Sub ${S3Dir}/${OpenApiFile}
+
+  TarakoLambdaLayer:
+    Type: 'AWS::Serverless::LayerVersion'
+    Properties:
+      LayerName: !Sub TarakoLambdaLayer-${PrNumber}
+      Description: 'Tarako Lambda Layer'
+      ContentUri: ./layer/
+      CompatibleRuntimes:
+        - python3.10
+      RetentionPolicy: Retain
+    Metadata:
+      BuildMethod: python3.10
  
   GetSectionsFunction:
     Type: 'AWS::Serverless::Function'
@@ -45,6 +57,8 @@ Resources:
       CodeUri: app/sections/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-sections-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersGetEvent:
           Type: Api
@@ -59,6 +73,8 @@ Resources:
       CodeUri: app/sections/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-section-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -73,6 +89,8 @@ Resources:
       CodeUri: app/sections/
       Handler: post.lambda_handler
       FunctionName: !Sub post-section-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersPostUserEvent:
           Type: Api
@@ -87,6 +105,8 @@ Resources:
       CodeUri: app/sections/
       Handler: put.lambda_handler
       FunctionName: !Sub put-section-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersPutUserEvent:
           Type: Api
@@ -101,6 +121,8 @@ Resources:
       CodeUri: app/users/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-users-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersGetEvent:
           Type: Api
@@ -115,6 +137,8 @@ Resources:
       CodeUri: app/users/
       Handler: get_user.lambda_handler
       FunctionName: !Sub get-user-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -129,6 +153,8 @@ Resources:
       CodeUri: app/users/
       Handler: post.lambda_handler
       FunctionName: !Sub post-user-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersPostUserEvent:
           Type: Api
@@ -143,6 +169,8 @@ Resources:
       CodeUri: app/users/
       Handler: put.lambda_handler
       FunctionName: !Sub put-user-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         UsersPutUserEvent:
           Type: Api
@@ -157,6 +185,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-tasks-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         TasksGetEvent:
           Type: Api
@@ -171,6 +201,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: post.lambda_handler
       FunctionName: !Sub post-task-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         TasksPostEvent:
           Type: Api
@@ -185,6 +217,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: get_task.lambda_handler
       FunctionName: !Sub get-task-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         TasksGetTaskEvent:
           Type: Api
@@ -199,6 +233,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: put.lambda_handler
       FunctionName: !Sub put-task-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         TasksPutTaskEvent:
           Type: Api
@@ -213,6 +249,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: delete.lambda_handler
       FunctionName: !Sub delete-task-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         TasksDeleteTaskEvent:
           Type: Api
@@ -227,6 +265,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_all_users_list.lambda_handler
       FunctionName: !Sub get-all-users-diaries-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersGetEvent:
           Type: Api
@@ -241,6 +281,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_single_user_list.lambda_handler
       FunctionName: !Sub get-user-diaries-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersGetUserEvent:
           Type: Api
@@ -255,6 +297,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: post_entry.lambda_handler
       FunctionName: !Sub post-user-diary-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersPostUserEvent:
           Type: Api
@@ -269,6 +313,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-user-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersGetUserDiaryEvent:
           Type: Api
@@ -283,6 +329,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: put_entry.lambda_handler
       FunctionName: !Sub put_user-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersPutUserDiaryEvent:
           Type: Api
@@ -297,6 +345,8 @@ Resources:
       CodeUri: app/diary/users/
       Handler: delete_entry.lambda_handler
       FunctionName: !Sub delete-user-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiaryUsersDeleteUserDiaryEvent:
           Type: Api
@@ -311,6 +361,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_all_sections_list.lambda_handler
       FunctionName: !Sub get-all-sections-diaries-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsGetEvent:
           Type: Api
@@ -325,6 +377,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_single_section_list.lambda_handler
       FunctionName: !Sub get-section-diaries-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsGetSectionEvent:
           Type: Api
@@ -339,6 +393,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: post_entry.lambda_handler
       FunctionName: !Sub post-section-diary-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsPostSectionEvent:
           Type: Api
@@ -353,6 +409,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-section-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsGetSectionDiaryEvent:
           Type: Api
@@ -367,6 +425,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: put_entry.lambda_handler
       FunctionName: !Sub put-section-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsPutSectionDiaryEvent:
           Type: Api
@@ -381,6 +441,8 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: delete_entry.lambda_handler
       FunctionName: !Sub delete-section-diary-entry-${PrNumber}
+      Layers:
+        - !Ref TarakoLambdaLayer
       Events:
         DiarySectionsDeleteSectionDiaryEvent:
           Type: Api
