--- a/template.yaml
+++ b/template.yaml
@@ -83,7 +83,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetEvent:
           Type: Api
@@ -103,7 +103,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -123,7 +123,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPostUserEvent:
           Type: Api
@@ -143,7 +143,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPutUserEvent:
           Type: Api
@@ -163,7 +163,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetEvent:
           Type: Api
@@ -183,7 +183,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetUserEvent:
           Type: Api
@@ -203,7 +203,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPostUserEvent:
           Type: Api
@@ -223,7 +223,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPutUserEvent:
           Type: Api
@@ -243,7 +243,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksGetEvent:
           Type: Api
@@ -263,7 +263,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksPostEvent:
           Type: Api
@@ -283,7 +283,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksGetTaskEvent:
           Type: Api
@@ -303,7 +303,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksPutTaskEvent:
           Type: Api
@@ -323,7 +323,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksDeleteTaskEvent:
           Type: Api
@@ -343,7 +343,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetEvent:
           Type: Api
@@ -363,7 +363,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetUserEvent:
           Type: Api
@@ -383,7 +383,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersPostUserEvent:
           Type: Api
@@ -403,7 +403,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetUserDiaryEvent:
           Type: Api
@@ -423,7 +423,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersPutUserDiaryEvent:
           Type: Api
@@ -443,7 +443,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersDeleteUserDiaryEvent:
           Type: Api
@@ -463,7 +463,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetEvent:
           Type: Api
@@ -483,7 +483,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetSectionEvent:
           Type: Api
@@ -503,7 +503,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsPostSectionEvent:
           Type: Api
@@ -523,7 +523,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetSectionDiaryEvent:
           Type: Api
@@ -543,7 +543,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsPutSectionDiaryEvent:
           Type: Api
@@ -563,7 +563,7 @@ Resources:
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
-      Role: !Ref LambdaExecutionRole
+      Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsDeleteSectionDiaryEvent:
           Type: Api
