--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -16,12 +16,8 @@ jobs:
         id: action_black
         with:
           black_args: '.'
-      - name: Check import order using isort
-        uses: isort/isort-action@v1
-        id: action_isort
-        with:
-          configuration: '--profile=black'
       - name: Annotate diff changes using reviewdog
+        if:  ${{ steps.action_black.outputs.has_changes == 'true' }}
         uses: reviewdog/action-suggester@v1
         with:
           tool_name: 'black'
@@ -49,8 +45,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - name: Install pyproject-flake8
-        run: pip install pyproject-flake8
+      - run: pip install pyproject-flake8
       - name: flake8 Lint comment to PR
         uses: reviewdog/action-flake8@v3
         with:
