--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -6,8 +6,8 @@ on:
       - 'layer/**.py'
 
 jobs:
-  black:
-    name: Black lint
+  black-isort:
+    name: Black & isort lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,16 +16,6 @@ jobs:
         id: action_black
         with:
           black_args: '.'
-      - name: Annotate diff changes using reviewdog
-        if:  ${{ steps.action_black.outputs.has_changes == 'true' }}
-        uses: reviewdog/action-suggester@v1
-        with:
-          tool_name: 'black'
-  isort:
-    name: isort lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
       - name: Check import order using isort
         uses: isort/isort-action@v1
         id: action_isort
@@ -34,7 +24,7 @@ jobs:
       - name: Annotate diff changes using reviewdog
         uses: reviewdog/action-suggester@v1
         with:
-          tool_name: 'isort'
+          tool_name: 'isort & black'
   flake8:
     runs-on: ubuntu-latest
     name: flake8 Lint
