--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -35,12 +35,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-      - run: pip install pyproject-flake8
       - name: flake8 Lint comment to PR
         uses: reviewdog/action-flake8@v3
         with:
           reporter: github-pr-review
+          flake8_args: --config=setup.cfg
       - name: flake8 Lint comment to PR check
         uses: reviewdog/action-flake8@v3
         with:
           reporter: github-pr-check
+          flake8_args: --config=setup.cfg
