add: ChatGPTとの繋ぎこみを行うための設定を追加
ChatGPTに関するテストはまだ行っていない
localでrequiements.txtがbuild、start-apiで実行エラーが出ないことは確認済み

--- a/.github/workflows/deploy_when_PR.yaml
+++ b/.github/workflows/deploy_when_PR.yaml
@@ -28,4 +28,5 @@ jobs:
       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
       AWS_ACCOUNT_NAME: ${{ secrets.AWS_ACCOUNT_NAME }}
       AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
