--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 boto3 = "^1.28.40"
+openai = "^0.28.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
