--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -77,7 +77,7 @@ jobs:
         id: deploy_step
         run: |
           sam build
-          sam deploy --template-file .aws-sam/build/template.yaml --stack-name ${STACK_NAME} --capabilities CAPABILITY_NAMED_IAM --s3-bucket ${AWS_S3_BUCKET} --parameter-overrides OpenApiFile=${OPENAPI_FILE} S3Dir=${S3_DIR} S3Bucket=${AWS_S3_BUCKET} PrNumber=${PR_NUMBER} OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} --no-fail-on-empty-changeset
+          sam deploy --template-file .aws-sam/build/template.yaml --stack-name ${STACK_NAME} --capabilities CAPABILITY_NAMED_IAM --s3-bucket ${AWS_S3_BUCKET} --parameter-overrides OpenApiFile=${OPENAPI_FILE} S3Dir=${S3_DIR} S3Bucket=${AWS_S3_BUCKET} PrNumber=${PR_NUMBER} OpenAiApiKey=${{ secrets.OPENAI_API_KEY }} --no-fail-on-empty-changeset
           deployed_url=$(aws cloudformation describe-stacks --stack-name ${STACK_NAME} --query "Stacks[0].Outputs[?OutputKey=='ApiUrl'].OutputValue" --output text)
           echo "deployed_url=$deployed_url" >> $GITHUB_OUTPUT
 
