--- a/template.yaml
+++ b/template.yaml
@@ -268,6 +268,7 @@ Resources:
           PR_NUM: !Ref PrNumber
           OPENAI_API_KEY: !Ref OpenAiApiKey
       Role: !GetAtt LambdaExecutionRole.Arn
+      Timeout: 120
       Events:
         TasksPostEvent:
           Type: Api
