--- a/template.yaml
+++ b/template.yaml
@@ -114,7 +114,7 @@ Resources:
             Path: /sections/{section_id}
             Method: get
             RestApiId: !Ref ApiGateway
-  
+
   PostSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -134,7 +134,7 @@ Resources:
             Path: /sections
             Method: post
             RestApiId: !Ref ApiGateway
-    
+
   PutSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -194,7 +194,7 @@ Resources:
             Path: /users/{user_id}
             Method: get
             RestApiId: !Ref ApiGateway
-  
+
   PostUserEntryFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
@@ -376,7 +376,7 @@ Resources:
             Path: /diary/users/{user_id}
             Method: get
             RestApiId: !Ref ApiGateway
-      
+
   PostUserDiaryFunction:
     Type: "AWS::Serverless::Function"
     Properties:
@@ -576,7 +576,7 @@ Resources:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: delete
             RestApiId: !Ref ApiGateway
-  
+
   GetAllChatHistoryFunction:
     Type: "AWS::Serverless::Function"
     Properties:
@@ -651,7 +651,7 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: 30
         WriteCapacityUnits: 30
-  
+
   TarakoUserTable:
     Type: 'AWS::DynamoDB::Table'
     Properties:
@@ -906,7 +906,7 @@ Resources:
       ProvisionedThroughput:
         ReadCapacityUnits: 30
         WriteCapacityUnits: 30
-      
+
       GlobalSecondaryIndexes:
         - IndexName: SectionIndex
           KeySchema:
@@ -946,7 +946,7 @@ Resources:
       TableName: ChatHistory
       AttributeDefinitions:
         - AttributeName: chat_id
-          AttributeType: N
+          AttributeType: S
         - AttributeName: timestamp
           AttributeType: S
         - AttributeName: user_id
@@ -971,7 +971,7 @@ Resources:
           KeySchema:
             - AttributeName: user_id
               KeyType: HASH
-            - Attributename: timestamp
+            - AttributeName: timestamp
               KeyType: RANGE
           Projection:
             ProjectionType: ALL
