--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,10 @@ pyproject-flake8 = "^6.0.0.post1"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[black]
+[tool.black]
 line-length = 119
 
-[isort]
+[tool.isort]
 profile = "black"
 
 [tool.flake8]
