--- a/template.yaml
+++ b/template.yaml
@@ -3,30 +3,35 @@ Transform: "AWS::Serverless-2016-10-31"
 Description: >-
   Tarako API Resource template
 
-Globals:
-  Function:
-    Timeout: 3
-    Runtime: python3.10
-
 Parameters:
-  OpenApiFile:
-    Type: String
-    Description: "OpenAPI file name"
-    Default: openapi.yaml
   PrNumber:
     Type: String
     Description: "PR number"
     Default: "dev"
-  S3Bucket:
-    Type: String
-    Description: "S3 Bucket name"
-  S3Dir:
-    Type: String
-    Description: "S3 Directory name"
-    Default: dev
   OpenAiApiKey:
     Type: String
     Description: "open ai api key"
+  # OpenApiFile:
+  #   Type: String
+  #   Description: "OpenAPI file name"
+  #   Default: openapi.yaml
+  # S3Bucket:
+  #   Type: String
+  #   Description: "S3 Bucket name"
+  # S3Dir:
+  #   Type: String
+  #   Description: "S3 Directory name"
+  #   Default: dev
+
+Globals:
+  Function:
+    Timeout: 120
+    Runtime: python3.10
+    Environment:
+      Variables:
+        PR_NUM: !Ref PrNumber
+    Layers:
+      - !Ref TarakoLambdaLayer
 
 Resources:
   ApiGateway:
@@ -81,11 +86,6 @@ Resources:
       CodeUri: app/sections/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-sections-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetEvent:
@@ -93,7 +93,6 @@ Resources:
           Properties:
             Path: /sections
             Method: get
-            RestApiId: !Ref ApiGateway
 
   GetSectionEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -101,11 +100,6 @@ Resources:
       CodeUri: app/sections/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-section-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetUserEvent:
@@ -113,7 +107,6 @@ Resources:
           Properties:
             Path: /sections/{section_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PostSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -121,11 +114,6 @@ Resources:
       CodeUri: app/sections/
       Handler: post.lambda_handler
       FunctionName: !Sub post-section-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPostUserEvent:
@@ -133,7 +121,6 @@ Resources:
           Properties:
             Path: /sections
             Method: post
-            RestApiId: !Ref ApiGateway
 
   PutSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -141,11 +128,6 @@ Resources:
       CodeUri: app/sections/
       Handler: put.lambda_handler
       FunctionName: !Sub put-section-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPutUserEvent:
@@ -153,7 +135,6 @@ Resources:
           Properties:
             Path: /sections/{section_id}
             Method: put
-            RestApiId: !Ref ApiGateway
 
   GetUsersFunction:
     Type: "AWS::Serverless::Function"
@@ -161,11 +142,6 @@ Resources:
       CodeUri: app/users/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-users-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetEvent:
@@ -173,7 +149,6 @@ Resources:
           Properties:
             Path: /users
             Method: get
-            RestApiId: !Ref ApiGateway
 
   GetUserEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -181,11 +156,6 @@ Resources:
       CodeUri: app/users/
       Handler: get_user.lambda_handler
       FunctionName: !Sub get-user-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersGetUserEvent:
@@ -193,7 +163,6 @@ Resources:
           Properties:
             Path: /users/{user_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PostUserEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -201,11 +170,6 @@ Resources:
       CodeUri: app/users/
       Handler: post.lambda_handler
       FunctionName: !Sub post-user-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPostUserEvent:
@@ -213,7 +177,6 @@ Resources:
           Properties:
             Path: /users
             Method: post
-            RestApiId: !Ref ApiGateway
 
   PutUserEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -221,11 +184,6 @@ Resources:
       CodeUri: app/users/
       Handler: put.lambda_handler
       FunctionName: !Sub put-user-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         UsersPutUserEvent:
@@ -233,7 +191,6 @@ Resources:
           Properties:
             Path: /users/{user_id}
             Method: put
-            RestApiId: !Ref ApiGateway
 
   GetTasksFunction:
     Type: "AWS::Serverless::Function"
@@ -241,11 +198,6 @@ Resources:
       CodeUri: app/tasks/
       Handler: get_list.lambda_handler
       FunctionName: !Sub get-tasks-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksGetEvent:
@@ -253,7 +205,6 @@ Resources:
           Properties:
             Path: /tasks
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PostTaskFunction:
     Type: "AWS::Serverless::Function"
@@ -261,11 +212,8 @@ Resources:
       CodeUri: app/tasks/
       Handler: post.lambda_handler
       FunctionName: !Sub post-task-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
       Environment:
         Variables:
-          PR_NUM: !Ref PrNumber
           OPENAI_API_KEY: !Ref OpenAiApiKey
       Role: !GetAtt LambdaExecutionRole.Arn
       Timeout: 120
@@ -275,7 +223,6 @@ Resources:
           Properties:
             Path: /tasks
             Method: post
-            RestApiId: !Ref ApiGateway
 
   GetTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -283,11 +230,6 @@ Resources:
       CodeUri: app/tasks/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-task-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksGetTaskEvent:
@@ -295,7 +237,6 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PutTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -303,11 +244,6 @@ Resources:
       CodeUri: app/tasks/
       Handler: put.lambda_handler
       FunctionName: !Sub put-task-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksPutTaskEvent:
@@ -315,7 +251,6 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: put
-            RestApiId: !Ref ApiGateway
 
   DeleteTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -323,11 +258,6 @@ Resources:
       CodeUri: app/tasks/
       Handler: delete.lambda_handler
       FunctionName: !Sub delete-task-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         TasksDeleteTaskEvent:
@@ -335,7 +265,6 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: delete
-            RestApiId: !Ref ApiGateway
 
   GetAllUsersDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -343,11 +272,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_all_users_list.lambda_handler
       FunctionName: !Sub get-all-users-diaries-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetEvent:
@@ -355,7 +279,6 @@ Resources:
           Properties:
             Path: /diary/users
             Method: get
-            RestApiId: !Ref ApiGateway
 
   GetUserDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -363,11 +286,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_single_user_list.lambda_handler
       FunctionName: !Sub get-user-diaries-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetUserEvent:
@@ -375,7 +293,6 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PostUserDiaryFunction:
     Type: "AWS::Serverless::Function"
@@ -384,8 +301,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: post_entry.lambda_handler
       FunctionName: !Sub post-user-diary-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
       Environment:
         Variables:
           PR_NUM: !Ref PrNumber
@@ -397,7 +312,6 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}
             Method: post
-            RestApiId: !Ref ApiGateway
 
   GetUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -405,11 +319,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-user-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersGetUserDiaryEvent:
@@ -417,7 +326,6 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PutUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -425,11 +333,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: put_entry.lambda_handler
       FunctionName: !Sub put_user-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersPutUserDiaryEvent:
@@ -437,7 +340,6 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: put
-            RestApiId: !Ref ApiGateway
 
   DeleteUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -445,11 +347,6 @@ Resources:
       CodeUri: app/diary/users/
       Handler: delete_entry.lambda_handler
       FunctionName: !Sub delete-user-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiaryUsersDeleteUserDiaryEvent:
@@ -457,7 +354,6 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: delete
-            RestApiId: !Ref ApiGateway
 
   GetAllSectionsDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -465,11 +361,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_all_sections_list.lambda_handler
       FunctionName: !Sub get-all-sections-diaries-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetEvent:
@@ -477,7 +368,6 @@ Resources:
           Properties:
             Path: /diary/sections
             Method: get
-            RestApiId: !Ref ApiGateway
 
   GetSectionDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -485,11 +375,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_single_section_list.lambda_handler
       FunctionName: !Sub get-section-diaries-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetSectionEvent:
@@ -497,7 +382,6 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PostSectionDiaryFunction:
     Type: "AWS::Serverless::Function"
@@ -505,11 +389,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: post_entry.lambda_handler
       FunctionName: !Sub post-section-diary-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsPostSectionEvent:
@@ -517,7 +396,6 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}
             Method: post
-            RestApiId: !Ref ApiGateway
 
   GetSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -525,11 +403,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: get_entry.lambda_handler
       FunctionName: !Sub get-section-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetSectionDiaryEvent:
@@ -537,7 +410,6 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: get
-            RestApiId: !Ref ApiGateway
 
   PutSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -545,11 +417,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: put_entry.lambda_handler
       FunctionName: !Sub put-section-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsPutSectionDiaryEvent:
@@ -557,7 +424,6 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: put
-            RestApiId: !Ref ApiGateway
 
   DeleteSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -565,11 +431,6 @@ Resources:
       CodeUri: app/diary/sections/
       Handler: delete_entry.lambda_handler
       FunctionName: !Sub delete-section-diary-entry-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsDeleteSectionDiaryEvent:
@@ -577,7 +438,6 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: delete
-            RestApiId: !Ref ApiGateway
 
   GetAllChatHistoryFunction:
     Type: "AWS::Serverless::Function"
@@ -585,11 +445,6 @@ Resources:
       CodeUri: app/chat/
       Handler: get_all_chat_history.lambda_handler
       FunctionName: !Sub get-all-chat-history-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetEvent:
@@ -597,7 +452,6 @@ Resources:
           Properties:
             Path: /chat
             Method: get
-            RestApiId: !Ref ApiGateway
 
   GetSingleUserChatHistoryFunction:
     Type: "AWS::Serverless::Function"
@@ -605,11 +459,6 @@ Resources:
       CodeUri: app/chat/
       Handler: get_single_user_chat_history.lambda_handler
       FunctionName: !Sub get-single-user-chat-history-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
       Role: !GetAtt LambdaExecutionRole.Arn
       Events:
         DiarySectionsGetSectionEvent:
@@ -617,28 +466,6 @@ Resources:
           Properties:
             Path: /chat/{user_id}
             Method: get
-            RestApiId: !Ref ApiGateway
-
-  PostSectionDiaryFunction:
-    Type: "AWS::Serverless::Function"
-    Properties:
-      CodeUri: app/chat/
-      Handler: post_chat.lambda_handler
-      FunctionName: !Sub post-section-diary-${PrNumber}
-      Layers:
-        - !Ref TarakoLambdaLayer
-      Environment:
-        Variables:
-          PR_NUM: !Ref PrNumber
-      Role: !GetAtt LambdaExecutionRole.Arn
-      Events:
-        DiarySectionsPostSectionEvent:
-          Type: Api
-          Properties:
-            Path: /chat/{user_id}
-            Method: post
-            RestApiId: !Ref ApiGateway
-
 
   TarakoSectionTable:
     Type: 'AWS::DynamoDB::Table'
