--- a/template.yaml
+++ b/template.yaml
@@ -93,6 +93,7 @@ Resources:
           Properties:
             Path: /sections
             Method: get
+            RestApiId: !Ref ApiGateway
 
   GetSectionEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -107,6 +108,7 @@ Resources:
           Properties:
             Path: /sections/{section_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PostSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -121,6 +123,7 @@ Resources:
           Properties:
             Path: /sections
             Method: post
+            RestApiId: !Ref ApiGateway
 
   PutSectionEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -135,6 +138,7 @@ Resources:
           Properties:
             Path: /sections/{section_id}
             Method: put
+            RestApiId: !Ref ApiGateway
 
   GetUsersFunction:
     Type: "AWS::Serverless::Function"
@@ -149,6 +153,7 @@ Resources:
           Properties:
             Path: /users
             Method: get
+            RestApiId: !Ref ApiGateway
 
   GetUserEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -163,6 +168,7 @@ Resources:
           Properties:
             Path: /users/{user_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PostUserEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -177,6 +183,7 @@ Resources:
           Properties:
             Path: /users
             Method: post
+            RestApiId: !Ref ApiGateway
 
   PutUserEntryFunction:
     Type: 'AWS::Serverless::Function'
@@ -191,6 +198,7 @@ Resources:
           Properties:
             Path: /users/{user_id}
             Method: put
+            RestApiId: !Ref ApiGateway
 
   GetTasksFunction:
     Type: "AWS::Serverless::Function"
@@ -205,6 +213,7 @@ Resources:
           Properties:
             Path: /tasks
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PostTaskFunction:
     Type: "AWS::Serverless::Function"
@@ -223,6 +232,7 @@ Resources:
           Properties:
             Path: /tasks
             Method: post
+            RestApiId: !Ref ApiGateway
 
   GetTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -237,6 +247,7 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PutTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -251,6 +262,7 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: put
+            RestApiId: !Ref ApiGateway
 
   DeleteTaskEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -265,6 +277,7 @@ Resources:
           Properties:
             Path: /tasks/{task_id}
             Method: delete
+            RestApiId: !Ref ApiGateway
 
   GetAllUsersDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -279,6 +292,7 @@ Resources:
           Properties:
             Path: /diary/users
             Method: get
+            RestApiId: !Ref ApiGateway
 
   GetUserDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -293,6 +307,7 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PostUserDiaryFunction:
     Type: "AWS::Serverless::Function"
@@ -312,6 +327,7 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}
             Method: post
+            RestApiId: !Ref ApiGateway
 
   GetUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -326,6 +342,7 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PutUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -340,6 +357,7 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: put
+            RestApiId: !Ref ApiGateway
 
   DeleteUserDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -354,6 +372,7 @@ Resources:
           Properties:
             Path: /diary/users/{user_id}/{diary_id}
             Method: delete
+            RestApiId: !Ref ApiGateway
 
   GetAllSectionsDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -368,6 +387,7 @@ Resources:
           Properties:
             Path: /diary/sections
             Method: get
+            RestApiId: !Ref ApiGateway
 
   GetSectionDiariesFunction:
     Type: "AWS::Serverless::Function"
@@ -382,6 +402,7 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PostSectionDiaryFunction:
     Type: "AWS::Serverless::Function"
@@ -396,6 +417,7 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}
             Method: post
+            RestApiId: !Ref ApiGateway
 
   GetSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -410,6 +432,7 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   PutSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -424,6 +447,7 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: put
+            RestApiId: !Ref ApiGateway
 
   DeleteSectionDiaryEntryFunction:
     Type: "AWS::Serverless::Function"
@@ -438,6 +462,7 @@ Resources:
           Properties:
             Path: /diary/sections/{section_id}/{diary_id}
             Method: delete
+            RestApiId: !Ref ApiGateway
 
   GetAllChatHistoryFunction:
     Type: "AWS::Serverless::Function"
@@ -452,6 +477,7 @@ Resources:
           Properties:
             Path: /chat
             Method: get
+            RestApiId: !Ref ApiGateway
 
   GetSingleUserChatHistoryFunction:
     Type: "AWS::Serverless::Function"
@@ -466,6 +492,7 @@ Resources:
           Properties:
             Path: /chat/{user_id}
             Method: get
+            RestApiId: !Ref ApiGateway
 
   TarakoSectionTable:
     Type: 'AWS::DynamoDB::Table'
