--- a/.github/workflows/deploy_when_PR.yaml
+++ b/.github/workflows/deploy_when_PR.yaml
@@ -2,7 +2,7 @@ name: Deploy to staging environment for PR
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened, labeled, unlabeled]
+    types: [opened, synchronize, reopened, labeled]
 
 jobs:
   delete_stack:
