add: タスクの状態が深刻度4以上の時、メールを送信

--- a/.github/workflows/deploy_when_PR.yaml
+++ b/.github/workflows/deploy_when_PR.yaml
@@ -30,3 +30,5 @@ jobs:
       AWS_GITHUB_OIDC_ROLE_NAME: ${{ secrets.AWS_GITHUB_OIDC_ROLE_NAME }}
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      SENDER_EMAIL: ${{ secrets.SENDER_EMAIL }}
+      RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
