actions: fix secrets name

--- a/.github/workflows/deploy_job_template.yaml
+++ b/.github/workflows/deploy_job_template.yaml
@@ -33,7 +33,7 @@ on:
       SENDER_EMAIL:
         description: 'Sender Email'
         required: true
-      CIPIENT_EMAIL:
+      RECIPIENT_EMAIL:
         description: 'Recipient Email'
         required: true
 
